--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "0.0.1",
     "description": "A chat application written in Node.js",
     "dependencies": {
+        "ejs": "^3.1.8",
         "express": "^4.18.1",
         "mongodb": "^4.7.0",
         "socket.io": "^4.5.1"
