--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dependencies": {
         "ejs": "^3.1.8",
         "express": "^4.18.1",
+        "express-session": "^1.17.3",
         "mongodb": "^4.7.0",
         "socket.io": "^4.5.1"
     }
