--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "express": "^4.18.1",
         "express-session": "^1.17.3",
         "mongodb": "^4.7.0",
+        "mongoose": "^6.5.1",
         "socket.io": "^4.5.1"
     }
 }
